--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,9 @@ classifiers =
 package_dir =
     = .
 packages = find:
-python_requires = >=3.9
+python_requires = >=3.8
+scripts =
+    scripts/lord-cli
 
 [options.packages.find]
 where = lord
