--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pytest==6.2.2
-requests==2.25
+pytest==6.2.5
+requests==2.26.0
 beautifulsoup4==4.9.3
-kivy==2.0.0
-kivymd==0.104.1
-peewee==3.14.4
+kivy==2.10.0
+kivymd==0.104.2
+peewee==3.14.8
+pandas==1.3.5
+xlrd==2.0.1
