--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ name = lord
 version = 0.0.1
 author = Claudio "Cleedee" Torcato
 author_email = claudiotorcato@gmail.com
-description = jogar Lord of the Rings: LGC no computador ou smartphone
+description = jogar Lord of the Rings: LGC no console interativo do Python
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Cleedee/lord
