--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,25 @@
+[tool.poetry]
+name = "lord"
+version = "0.1.0"
+description = "Application to play LOTR LCG"
+authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
+peewee = "^3.16.2"
+xlrd = "^2.0.1"
+rich = "^13.4.1"
+pyjsonq = "^1.0.2"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+peewee-moves = "^2.1.0"
+jupyterlab = "^4.0.1"
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
