--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lord"
 version = "0.2.0"
-description = "Application to play LOTR LCG"
+description = "Jogar Lord of the Rings: LGC no console interativo do Python"
 authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
 readme = "README.md"
 
