--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyjsonq = "^1.0.2"
 pytest = "^7.3.1"
 peewee-moves = "^2.1.0"
 jupyterlab = "^4.0.1"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core"]
